assets/css/style.css
@import url("https://use.typekit.net/luh3lwb.css");

@font-face {
  font-family: 'tungsten-condensed';
  src:
    url('../fonts/TungstenCondensed-Medium.eot?#iefix') format('embedded-opentype'),
    url('../fonts/TungstenCondensed-Medium.otf') format('opentype'),
    url('../fonts/TungstenCondensed-Medium.woff') format('woff'),
    url('../fonts/TungstenCondensed-Medium.ttf') format('truetype'),
    url('../fonts/TungstenCondensed-Medium.svg#TungstenCondensed-Medium') format("svg");
  font-weight: normal;
  font-style: normal;
}



/* Typography
 * ----------------------------------------------
 */

h1, h1 a, h2, h2 a {
  font-family: tungsten-condensed;
  letter-spacing: 5px;
  display: table;
  text-transform: uppercase;
}

h1, h1 a, h1 a:hover, h1 a:visited,
h2, h2 a, h2 a:hover, h2 a:visited,
h3, h3 a, h3 a:hover, h3 a:visited,
h4, h4 a, h4 a:hover, h4 a:visited,
h5, h5 a, h5 a:hover, h5 a:visited,
h6, h6 a, h6 a:hover, h6 a:visited {
  text-decoration: none;
}

h1, h1 a {
  font-size: 40px;
  margin-top: 30px;
}


body, p, li, span, ol, ul, table, a {
  font-size: 18px;
  font-family: futura-pt;
  letter-spacing: 1px;
  word-spacing: 3px;
}

header {
  height: 56px;
}

footer {
  font-size: 18px;
}

main p a, main li a {
  text-decoration: underline;
}

strong {
  font-weight: 900;
}

.site-nav a {
  transition: all 0.5s ease-in;
}
.site-nav a:hover {
  transition: all 0.4s ease-in-out;
}

@media screen and (max-width: 899px) {
  .site-nav {
    position:absolute;
    top:0;
    right:0;
    margin: 0;
    width: 100vw;
    height: 100vh;
    text-align:center;
    font-size: 3em;
    letter-spacing: 4px;
    border: 0;
  }
  .site-nav label[for="nav-trigger"] {
    display:block;
    float:right;
    top: 15px;
    right: 54px;
    z-index:2;
    cursor:pointer;
    background-color:#fdfdfd;
    border:1px solid #e8e8e8;
    border-radius:5px;
    position: fixed;
    z-index: 2000;
  }
  .site-nav .menu-icon {
    display:block;
    float:right;
    width:36px;
    height:26px;
    line-height:0;
    padding-top:10px;
    text-align:center
  }
  .site-nav .menu-icon>svg {
    fill:#424242
  }
  .site-nav input ~ .trigger {
    clear:both;
    display:none
  }
  .site-nav input:checked ~ .trigger {
    display:block;
    padding-bottom:5px;
    background-color: rgba(0,0,0,0.8);
    width: 100%;
    height: 100%;
    z-index: 1000;
    position: absolute;
    vertical-align: middle;
    padding-top: calc((100vh - 350px)/2);
  }
  .site-nav .page-link {
    display:block;
    color: #fff !important;
    margin-right: 0 !important;
    margin-left: 0 !important;
    font-size: 36px;
  }
}
@media screen and (min-width: 900px) {
  nav .page-link {
    padding: 4px 10px 6px 10px;
    font-family: futura-pt;
    letter-spacing: 1px;
    font-size: 18px;
    margin-left: 10px !important;
    border: 1px solid #fff;
  }
  nav .page-link:not(:last-child) {
    margin-right: 10px !important;
  }

  nav .current {
    border: 1px solid #000;
  }

  nav a.current:hover {
    text-decoration: none;
  }
}

/* Layout
 * ----------------------------------------------
 */

/* reset body */
body {
  margin: 0;
}

.hide {
  display: none;
}

header, footer {
  padding: 0 7.5vw;
}

nav {
  margin-top: 28px;
}

@media (max-width: 769px) {
  .wrapper {
    margin-left: 30px;
    margin-right: 30px;
  }
}

.wrapper {
  max-width: calc(1200px - (30px * 2));
}

article {
  min-height: calc(100vh - 280px);
}

.text-center {
  text-align: center;
  margin-left: auto;
  margin-right: auto;
}

.logo {
  float: left;
  padding-top: 28px;
}

.site-nav {
  line-height: 40px;
}


/* Styles and colours
 * ----------------------------------------------
 */
body {
  background: #fff;
}

h1, h1 a, h2, h2 a, h3, h3 a, h4, h4 a, h5, h5 a, h6, h6 a {
  color: #242223;
}

p, a, a:hover, a:visited {
  color: #464445;
}

li a {
  text-decoration: none;
}

header, footer {
  background-color: transparent;
}

.logo h1, .logo h1 a {
  color: #161415;
}

.logo h2, .logo h2 a, nav a, .site-nav .page-link {
  color: #464445;
}

.site-header, .site-footer {
  border: 0;
}

.site-footer {
  margin-top: 40px;
}

ul.social {
  width: 360px;
  margin: 0 auto;
}
ul.social li {
  width: 24px;
  list-style-type: none;
  display: inline-block;
  margin: 0 25px;
  box-sizing: border-box;
  text-align: center;
}

/* Full-width video & images
 * ----------------------------------------------
 */
.video-full {
  margin-top: 40px;
  width: 85vw;
  margin-left: 7.5vw;
}

.video-full video {
  width: 100%;
  height: 100%;
}

.video-embed {
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
}

/* Full screen video and image containers */
.cinema-mode {
  width: 100%;
  height: auto;
  background: #000;
}

.single-video-wrapper {
  width: 85%;
  margin: 0 auto;
  position: relative;
  padding-bottom: 42%;
  margin-top: 50px;
  height: 0;
  overflow: hidden;
}

@media (max-width: 899px) {
  .single-video-wrapper {
    width: 100%;
    padding-bottom: 42%;
  }

  .cinema-mode {
    background: #fff;
  }
}


/* Video & image gallery
 * ----------------------------------------------
 */
.video-gallery,
.image-gallery {
  width: 85%;
  margin-top: 60px;
  margin-left: auto;
  margin-right: auto;
  display: block;
}

.video-gallery .inner,
.image-gallery .inner {
  width: 100%;
  display: flex;
  margin-bottom: 120px;
}

.video-gallery a,
.image-gallery a {
  flex: 1;
  transition: all 1s ease-in-out;
  text-decoration: none;
}

@media (min-width:768px) {
  .video-gallery .inner,
  .image-gallery .inner {
    flex-direction: row;
  }

  .video-gallery a, .video-gallery div {
  	width: 33.33333%;
  }

  .image-gallery a, .image-gallery div {
    width: 50%;
  }

  .video-gallery .inner {
  margin-bottom: 120px;
  }

  .image-gallery .inner {
  margin-bottom: 60px;
  }

}

@media (max-width:767px) {
  .video-gallery .inner, .video-gallery a,
  .image-gallery .inner, .image-gallery a {
  	width: 100%;
    display: block;
  }

  .video-gallery .inner,
  .image-gallery .inner {
  margin-bottom: 10px;
  }
}

.video-gallery a img,
.image-gallery a img {
	width: 100%;
}

.video-gallery a:hover,
.image-gallery a:hover {
  filter: brightness(1.3);
  transition: all 1s ease-in-out;
}

.video-gallery a:hover > h2, .video-gallery a:hover > h4 {
  transition: all 1s ease-in-out;
  opacity: 0;
}

.video-gallery h2 {
  margin-top: -25%;
  display: block;
  color: #fff;
  letter-spacing: 1.5px;
  text-shadow: 0 0 20px #000;
  transition: all 1s ease-in-out;
}
.video-gallery h4 {
  margin-top: -20px;
  display: block;
  color: #fff;
  text-shadow: 0 0 20px #000;
  letter-spacing: 0;
  font-size: 17px;
  margin-bottom: 60px;
  transition: all 1s ease-in-out;
}


/* Page content layout
 * ----------------------------------------------
 */
.about-page div {
   display: inline-block;
   padding: 10px;
   box-sizing: border-box;
   vertical-align: top;
   margin-top: 80px;
}

.about-page img {
  max-width: 80%;
}

.about-page h1 {
  margin-top: 0;
  line-height: 40px;
}

@media (max-width: 899px) {
  .about-page div {
    width: 100%;
  }
  .about-page img {
    margin: 0 auto;
  }
}
@media (min-width: 900px) {
  .about-page .left {
    width: 50%;
  }
  .about-page .right {
    width: 49%;
  }
  .about-page img {
    float: right;
  }
}

.video-gallery-body h1 {
  margin-top: 60px;
  margin-bottom: 0;
}

.video-item-body h2 {
  margin-top: 0;
  margin-bottom: 0;
}

